fix: brand name alignment

--- a/client/src/styles/components/global/footer.scss
+++ b/client/src/styles/components/global/footer.scss
@@ -26,7 +26,7 @@
   }
 
   &-brand {
-    justify-content: flex-start;
+    justify-content: flex-start !important;
 
     &-container {
       width: 100%;
